[tool.poetry]
name = "discord-prank"
version = "0.1.0"
description = ""
authors = ["amirmaula1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.0"
Flask = "^1.1.2"
replit = "^3.0.0"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
